// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders checked 1`] = `
<div
  className="basic-svg-checkbox"
>
  <label
    className="label-cbx"
    for="cbx"
  >
    <input
      checked="checked"
      class="invisible"
      id="cbx"
      type="checkbox"
    />
    <div
      className="checkbox"
      style={
        Object {
          "height": "16px",
          "width": "16px",
        }
      }
    >
      <svg
        height="16px"
        viewBox="0 0 20 20"
        width="16px"
      >
        <path
          d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"
        />
        <polyline
          points="4 11 8 15 16 6"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`renders with className 1`] = `
<div
  className="basic-svg-checkbox"
>
  <label
    className="label-cbx"
    for="cbx"
  >
    <input
      class="invisible"
      id="cbx"
      type="checkbox"
    />
    <div
      className="checkbox"
      style={
        Object {
          "height": "16px",
          "width": "16px",
        }
      }
    >
      <svg
        height="16px"
        viewBox="0 0 20 20"
        width="16px"
      >
        <path
          d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"
        />
        <polyline
          points="4 11 8 15 16 6"
        />
      </svg>
    </div>
  </label>
</div>
`;
